--- a/Spay&Neuter.html
+++ b/Spay&Neuter.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <!-- navbar -->
@@ -35,7 +36,7 @@
             class="flex gap-[30px] xl:gap-[66px] items-center max-[950px]:hidden"
           >
             <a
-              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+              class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
               href="./sevices.html"
               >SERVICES</a
             >
@@ -100,7 +101,7 @@
               <div class="px-4 pt-24 pb-4">
                 <div class="flex flex-col gap-[40px] items-center">
                   <a
-                    class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+                    class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
                     href="./sevices.html"
                     >SERVICES</a
                   >
@@ -141,7 +142,11 @@
     </div>
     <!-- hero-section -->
     <section>
-      <div class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative">
+      <div
+        data-aos="fade-down"
+        data-aos-duration="1000"
+        class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
+      >
         <div
           class="absolute right-0 max-sm:top-0 sm:mt-5 md:top-10 max-sm:max-w-[220px] max-md:max-w-[272px] max-lg:max-w-[400px] max-xl:max-w-[500px] xl:max-w-[600px]"
         >
@@ -187,7 +192,7 @@
     </section>
     <!--  -->
     <section>
-      <div class="bg-[rgba(215,217,221,0.50)] relative">
+      <div class="bg-[rgba(215,217,221,0.50)] relative overflow-hidden">
         <div class="absolute bottom-0 w-full">
           <img
             class="mx-auto"
@@ -199,11 +204,15 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
         >
           <p
+            data-aos="fade-right"
+            data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[18px] sm:mb-6"
           >
             Why spay or neuter?
           </p>
           <p
+            data-aos="fade-right"
+            data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl mb-[18px] sm:mb-6"
           >
             Spaying and neutering has many health and behavioral benefits for
@@ -212,6 +221,8 @@
             pyometra). It also removes heat cycles and coming into season.
           </p>
           <p
+            data-aos="fade-right"
+            data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl mb-[28px] sm:mb-10"
           >
             Neutering has been proven to prevent testicular cancer and may
@@ -221,11 +232,15 @@
             When to spay or neuter.
           </p>
           <p
+            data-aos="fade-left"
+            data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[18px] sm:mb-6"
           >
             When to spay or neuter?
           </p>
           <p
+            data-aos="fade-left"
+            data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl mb-[18px] sm:mb-6"
           >
             Dog spays and neuters are performed between the ages of 6 and 9
@@ -234,12 +249,16 @@
             allow their bones to mature.
           </p>
           <p
+            data-aos="fade-left"
+            data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl mb-[18px] sm:mb-6"
           >
             Cat spays and neuters should typically be carried out around 6
             months of age.
           </p>
           <p
+            data-aos="fade-left"
+            data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl mb-[28px] sm:mb-10"
           >
             In older pets who are no spayed or neutered, we’ll discuss all of
@@ -247,11 +266,15 @@
             time for your pet to be spay or neutered.
           </p>
           <p
+            data-aos="fade-right"
+            data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[18px] sm:mb-6"
           >
             Long-Term Cost Savings
           </p>
           <p
+            data-aos="fade-right"
+            data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl"
           >
             Spaying or neutering your pet can save you money in the long run.
@@ -264,7 +287,9 @@
     </section>
     <!--  -->
     <section>
-      <div class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20">
+      <div
+        class="max-w-[1160px] overflow-hidden mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20"
+      >
         <div>
           <p
             class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10"
@@ -273,6 +298,8 @@
           </p>
           <div>
             <button
+              data-aos="fade-right"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -342,6 +369,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-left"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -414,6 +443,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-right"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -486,6 +517,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-left"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -557,6 +590,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-right"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -628,6 +663,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-left"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -706,6 +743,8 @@
     <section>
       <div class="bg-[rgba(215,217,221,0.50)]">
         <div
+          data-aos="zoom-out"
+          data-aos-duration="1000"
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20"
         >
           <p
@@ -749,7 +788,11 @@
         <div
           class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[80px] mx-auto"
         >
-          <div class="max-w-[867px]">
+          <div
+            data-aos="zoom-in"
+            data-aos-duration="1000"
+            class="max-w-[867px]"
+          >
             <p
               class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-[30px]"
             >
@@ -1003,6 +1046,10 @@
           }
         });
       });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
