--- a/emergencycare.html
+++ b/emergencycare.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <!-- navbar -->
@@ -35,7 +36,7 @@
             class="flex gap-[30px] xl:gap-[66px] items-center max-[950px]:hidden"
           >
             <a
-              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+              class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
               href="./sevices.html"
               >SERVICES</a
             >
@@ -100,7 +101,7 @@
               <div class="px-4 pt-24 pb-4">
                 <div class="flex flex-col gap-[40px] items-center">
                   <a
-                    class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+                    class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
                     href="./sevices.html"
                     >SERVICES</a
                   >
@@ -141,7 +142,11 @@
     </div>
     <!-- hero-section -->
     <section>
-      <div class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative">
+      <div
+        class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
+        data-aos="fade-down"
+        data-aos-duration="1000"
+      >
         <div
           class="absolute right-0 max-md:top-5 md:bottom-0 max-sm:max-w-[253px] max-md:max-w-[300px] max-xl:max-w-[400px]"
         >
@@ -153,7 +158,7 @@
         </div>
         <div class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto">
           <div
-            class="max-w-[664px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[90px]"
+            class="max-w-[664px] pt-[176px] md:pt-[140px] pb-[60px] md:pb-17"
           >
             <p
               class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal] mr-8"
@@ -161,7 +166,7 @@
               Urgent & Emergency Care
             </p>
             <p
-              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] leading-[157%] sm:leading-[130%] mt-[30px] sm:mt-5 mb-[51px] sm:mb-12"
+              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] leading-[157%] sm:leading-[130%] mt-[25px] sm:mt-5 mb-10"
             >
               At Nebula Vets, we understand that when your pet is sick or
               injured, prompt and quality care is essential. Our dedicated team
@@ -179,7 +184,7 @@
       </div>
     </section>
     <!--  -->
-    <section>
+    <section class="overflow-hidden">
       <div class="bg-[rgba(215,217,221,0.50)] relative">
         <div class="absolute bottom-0 w-full">
           <img
@@ -193,11 +198,15 @@
         >
           <p
             class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+            data-aos="fade-right"
+            data-aos-duration="1000"
           >
             Urgent & Emergency Care during open hours
           </p>
           <p
-            class="my-[20px] text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg"
+            class="my-6 text-[#494336] leading-[22px] sm:leading-[24px] text-sm sm:text-base md:text-lg"
+            data-aos="fade-right"
+            data-aos-duration="1000"
           >
             At Nebula Vets, we understand that emergencies can happen at any
             time, and your pet's health and well-being are our top priority. We
@@ -205,7 +214,9 @@
             you need us.
           </p>
           <p
-            class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg"
+            class="text-[#494336] leading-[22px] sm:leading-[24px] text-sm sm:text-base md:text-lg"
+            data-aos="fade-right"
+            data-aos-duration="1000"
           >
             Our clinic is open from
             <span class="font-extrabold"
@@ -215,7 +226,9 @@
             provide care for your pets.
           </p>
           <p
-            class="mt-[20px] text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg"
+            class="mt-6 text-[#494336] leading-[22px] sm:leading-[24px] text-sm sm:text-base md:text-lg"
+            data-aos="fade-right"
+            data-aos-duration="1000"
           >
             If you have an urgent situation and require immediate advice or
             first aid instructions while you're on your way to our practice, you
@@ -224,24 +237,32 @@
             arrive.
           </p>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal] mt-[35px] sm:mt-[40px] mb-[20px]"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal] mt-10 mb-6"
+            data-aos="fade-left"
+            data-aos-duration="1000"
           >
             Outside open hours
           </p>
           <p
-            class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg"
+            class="text-[#494336] leading-[22px] sm:leading-[24px] text-sm sm:text-base md:text-lg"
+            data-aos="fade-left"
+            data-aos-duration="1000"
           >
             The closest 24hr emergency veterinary hospital to our practice is:
             <br />
             Their number is 123456
           </p>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal] mt-[35px] sm:mt-[40px] mb-[20px]"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal] mt-10 mb-6"
+            data-aos="fade-right"
+            data-aos-duration="1000"
           >
             Reasons to seek Urgent or Emergency care
           </p>
           <ul
-            class="text-[#494336] ext-sm sm:text-base md:text-lg leading-[24px] list-disc ml-6"
+            class="text-[#494336] ext-sm sm:text-base md:text-lg leading-[22px] sm:leading-[24px] list-disc ml-6"
+            data-aos="fade-right"
+            data-aos-duration="1000"
           >
             <li>Open wounds</li>
             <li>Toxin ingestion or foreign body</li>
@@ -261,16 +282,18 @@
       </div>
     </section>
     <!--  -->
-    <section>
+    <section class="overflow-hidden">
       <div class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20">
         <div>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10 leading-[normal]"
           >
             Why Choose Nebula Vets for Emergency and Urgent Care:
           </p>
           <div>
             <button
+              data-aos="fade-right"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -341,6 +364,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-left"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -411,6 +436,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-right"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -482,6 +509,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-left"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -553,6 +582,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-right"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -623,6 +654,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-left"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -693,6 +726,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-right"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -763,6 +798,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-left"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -839,7 +876,7 @@
     <!-- forward to seeing -->
     <section>
       <div
-        class="bg-[#494336] relative border-b-[2px] border-solid border-[#D8DADC] max-md:pb-[106px]"
+        class="bg-[#494336] relative border-b-[2px] border-solid border-[#D8DADC] max-md:pb-[80px]"
       >
         <div
           class="absolute right-0 w-[360px] sm:w-[400px] md:w-[500px] bottom-0"
@@ -851,13 +888,19 @@
           />
         </div>
         <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] pt-[60px] sm:pt-[80px] pb-[100px] sm:pb-[90px] mx-auto"
+          class="max-w-[1160px] px-[32px] sm:px-[40px] pt-[60px] sm:pt-[80px] pb-[100px] sm:pb-[80px] mx-auto"
         >
-          <div class="max-w-[530px]">
+          <div
+            class="max-w-[530px]"
+            data-aos="zoom-out"
+            data-aos-duration="1000"
+          >
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[45px] leading-[109%]"
+              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-10 leading-[normal]"
             >
-              We look forward to seeing you and your pet soon!
+              We look forward to <br class="min-[400px]:hidden" />
+              seeing you and your <br class="min-[400px]:hidden" />
+              pet soon!
             </p>
             <a
               class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
@@ -1099,6 +1142,10 @@
           }
         });
       });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
