--- a/surgery.html
+++ b/surgery.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <!-- navbar -->
@@ -35,7 +36,7 @@
             class="flex gap-[30px] xl:gap-[66px] items-center max-[950px]:hidden"
           >
             <a
-              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+              class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
               href="./sevices.html"
               >SERVICES</a
             >
@@ -100,7 +101,7 @@
               <div class="px-4 pt-24 pb-4">
                 <div class="flex flex-col gap-[40px] items-center">
                   <a
-                    class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+                    class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
                     href="./sevices.html"
                     >SERVICES</a
                   >
@@ -141,7 +142,11 @@
     </div>
     <!-- hero-section -->
     <section>
-      <div class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative">
+      <div
+        data-aos="fade-down"
+        data-aos-duration="1000"
+        class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
+      >
         <div
           class="absolute right-0 max-md:top-6 md:bottom-5 max-sm:max-w-[272px] max-md:max-w-[272px] max-lg:max-w-[400px] max-xl:max-w-[500px] xl:max-w-[600px]"
         >
@@ -183,7 +188,7 @@
     </section>
     <!--  -->
     <section>
-      <div class="bg-[rgba(215,217,221,0.50)] relative">
+      <div class="bg-[rgba(215,217,221,0.50)] overflow-hidden relative">
         <div class="absolute bottom-0 w-full">
           <img
             class="mx-auto"
@@ -195,11 +200,15 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
         >
           <p
+            data-aos="fade-right"
+            data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[18px] sm:mb-5"
           >
             Does my pet need a pre-consultation?
           </p>
           <p
+            data-aos="fade-right"
+            data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg mb-[30px] sm:mb-10"
           >
             Yes, by conducting a pre-operative consultation, performing a
@@ -209,11 +218,15 @@
             priorities throughout the entire surgical process
           </p>
           <p
+            data-aos="fade-left"
+            data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[18px] sm:mb-5"
           >
             How much will it cost?
           </p>
           <p
+            data-aos="fade-left"
+            data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg mb-[18px] sm:mb-5"
           >
             Surgery costs can vary based on several factors, including the
@@ -223,6 +236,8 @@
             pre-surgical consultation with our experienced veterinarians.
           </p>
           <p
+            data-aos="fade-left"
+            data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg mb-[30px] sm:mb-10"
           >
             Surgery costs can vary based on several factors, including the
@@ -232,11 +247,15 @@
             pre-surgical consultation with our experienced veterinarians.
           </p>
           <p
+            data-aos="fade-right"
+            data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[18px] sm:mb-5"
           >
             Do you accept insurance?
           </p>
           <p
+            data-aos="fade-right"
+            data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg"
           >
             Yes, at Nebula Vets, we accept all forms of pet insurance. We
@@ -250,15 +269,21 @@
     </section>
     <!--  -->
     <section>
-      <div class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20">
+      <div
+        class="max-w-[1160px] overflow-hidden mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20"
+      >
         <div>
           <p
+            data-aos="zoom-in"
+            data-aos-duration="1000"
             class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10"
           >
             Why Choose Nebula Vets for Your Pet's Surgery:
           </p>
           <div>
             <button
+              data-aos="fade-right"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -330,6 +355,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-left"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -401,6 +428,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-right"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -471,6 +500,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-left"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -543,6 +574,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-right"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -614,6 +647,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-left"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -693,6 +728,8 @@
     <section>
       <div class="bg-[rgba(215,217,221,0.50)]">
         <div
+          data-aos="zoom-out"
+          data-aos-duration="1000"
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20"
         >
           <p
@@ -728,6 +765,8 @@
           />
         </div>
         <div
+          data-aos="zoom-in"
+          data-aos-duration="1000"
           class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[80px] mx-auto"
         >
           <div class="max-w-[867px]">
@@ -983,6 +1022,10 @@
           }
         });
       });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
