--- a/telemedicine.html
+++ b/telemedicine.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <!-- navbar -->
@@ -35,7 +36,7 @@
             class="flex gap-[30px] xl:gap-[66px] items-center max-[950px]:hidden"
           >
             <a
-              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+              class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
               href="./sevices.html"
               >SERVICES</a
             >
@@ -100,7 +101,7 @@
               <div class="px-4 pt-24 pb-4">
                 <div class="flex flex-col gap-[40px] items-center">
                   <a
-                    class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+                    class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
                     href="./sevices.html"
                     >SERVICES</a
                   >
@@ -141,7 +142,11 @@
     </div>
     <!-- hero-section -->
     <section>
-      <div class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative">
+      <div
+        data-aos="fade-down"
+        data-aos-duration="1000"
+        class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
+      >
         <div
           class="absolute right-0 max-md:top-0 md:bottom-10 max-sm:max-w-[283px] max-md:max-w-[300px] max-lg:max-w-[400px] max-xl:max-w-[500px] xl:max-w-[600px]"
         >
@@ -153,7 +158,7 @@
         </div>
         <div class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto">
           <div
-            class="max-w-[664px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[123px]"
+            class="max-w-[664px] pt-[176px] md:pt-[140px] pb-[60px] md:pb-[100px]"
           >
             <p
               class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal] mr-8"
@@ -161,7 +166,7 @@
               Telemedicine
             </p>
             <p
-              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] leading-[157%] sm:leading-[130%] mt-[30px] sm:mt-5 mb-[51px] sm:mb-12"
+              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] leading-[157%] sm:leading-[130%] mt-[30px] sm:mt-5 mb-[45px] sm:mb-10"
             >
               Nebula Vets' online telemedicine service is a convenient and
               innovative way to connect with our veterinary doctors from the
@@ -182,11 +187,11 @@
     </section>
     <!--  -->
     <section>
-      <div class="bg-[rgba(215,217,221,0.50)] relative">
-        <div class="absolute bottom-0 w-full">
+      <div class="bg-[rgba(215,217,221,0.50)] overflow-hidden relative">
+        <div class="absolute bottom-2 w-full">
           <img
             class="mx-auto"
-            src="./assetes/img/png/health-exam-bg-img.png"
+            src="./assetes/img/png/motion-2-bg-img.png"
             alt=""
           />
         </div>
@@ -194,11 +199,15 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[120px] sm:pb-[130px] relative z-[1]"
         >
           <p
+            data-aos="fade-right"
+            data-aos-duration="1000"
             class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
           >
             Why use Telemedicine
           </p>
           <p
+            data-aos="fade-right"
+            data-aos-duration="1000"
             class="mt-[18px] sm:mt-[20px] text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg"
           >
             Nebula Vets' online telemedicine service is designed to provide
@@ -209,11 +218,15 @@
             platform.
           </p>
           <p
+            data-aos="fade-left"
+            data-aos-duration="1000"
             class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal] mt-[38px] sm:mt-10 mb-[18px] sm:mb-5"
           >
             During the online consultation
           </p>
           <p
+            data-aos="fade-left"
+            data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg"
           >
             Our veterinarians will carefully assess the information you provide
@@ -223,6 +236,8 @@
             evaluation and treatment are necessary.
           </p>
           <p
+            data-aos="fade-left"
+            data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg my-[18px] sm:my-5"
           >
             This immediate access to professional veterinary advice can be
@@ -232,6 +247,8 @@
             peace of mind.
           </p>
           <p
+            data-aos="fade-left"
+            data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg"
           >
             However, it's important to note that there are limitations to
@@ -250,7 +267,11 @@
         class="swiper mySwiper !pb-[77px] md:!py-[80px] !pt-15 !max-w-[1440px] !pl-[32px] md:!px-[70px] !mx-auto"
       >
         <div class="swiper-wrapper">
-          <div class="swiper-slide">
+          <div
+            data-aos="flip-left"
+            data-aos-duration="1000"
+            class="swiper-slide"
+          >
             <div
               class="bg-[#494336] flex flex-col justify-start px-8 pt-[22px] pb-[42px] max-w-[310px] h-[420px] sm:h-[465px]"
             >
@@ -268,7 +289,11 @@
               </p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div
+            data-aos="flip-left"
+            data-aos-duration="1000"
+            class="swiper-slide"
+          >
             <div
               class="bg-[#494336] flex flex-col justify-start px-8 pt-[22px] pb-[42px] max-w-[310px] h-[420px] sm:h-[465px]"
             >
@@ -285,7 +310,11 @@
               </p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div
+            data-aos="flip-left"
+            data-aos-duration="1000"
+            class="swiper-slide"
+          >
             <div
               class="bg-[#494336] flex flex-col justify-start px-8 pt-[22px] pb-[42px] max-w-[310px] h-[420px] sm:h-[465px]"
             >
@@ -303,7 +332,11 @@
               </p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div
+            data-aos="flip-left"
+            data-aos-duration="1000"
+            class="swiper-slide"
+          >
             <div
               class="bg-[#494336] flex flex-col justify-start px-8 pt-[22px] pb-[42px] max-w-[310px] h-[420px] sm:h-[465px]"
             >
@@ -352,13 +385,19 @@
           />
         </div>
         <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] pt-[60px] sm:pt-[80px] pb-[100px] sm:pb-[90px] mx-auto"
+          class="max-w-[1160px] px-[32px] sm:px-[40px] pt-[60px] sm:pt-[80px] pb-[100px] sm:pb-[80px] mx-auto"
         >
-          <div class="max-w-[530px]">
+          <div
+            data-aos="zoom-in"
+            data-aos-duration="1000"
+            class="max-w-[530px]"
+          >
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[45px] leading-[109%]"
+              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-10 leading-[109%]"
             >
-              We look forward to seeing you and your pet soon!
+              We look forward to <br class="min-[400px]:hidden" />
+              seeing you and your <br class="min-[400px]:hidden" />
+              pet soon!
             </p>
             <a
               class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
@@ -647,6 +686,10 @@
           1200: { slidesPerView: 4 },
         },
       });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
