--- a/carrer.html
+++ b/carrer.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <style>
     .swiper-slide {
@@ -77,7 +78,7 @@
               >LOCATION</a
             >
             <a
-              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+              class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
               href="./carrer.html"
               >CAREER</a
             >
@@ -142,7 +143,7 @@
                     >LOCATION</a
                   >
                   <a
-                    class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+                    class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
                     href="./carrer.html"
                     >CAREER</a
                   >
@@ -167,102 +168,104 @@
       </div>
     </div>
     <!-- hero-section -->
-    <section>
-      <div class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative">
-        <div
-          class="absolute right-0 max-sm:top-3 sm:mt-5 md:top-10 max-sm:max-w-[220px] max-md:max-w-[272px] max-lg:max-w-[400px] max-xl:max-w-[500px] xl:max-w-[600px]"
-        >
-          <img
-            class="w-full"
-            src="./assetes/img/png/Career Icon.png"
-            alt="bg-img"
-          />
-        </div>
-        <div class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto">
+    <div data-aos="fade-down" data-aos-duration="1000">
+      <section>
+        <div class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative">
           <div
-            class="max-w-[664px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[90px]"
+            class="absolute right-0 max-sm:top-3 sm:mt-5 md:top-10 max-sm:max-w-[220px] max-md:max-w-[272px] max-lg:max-w-[400px] max-xl:max-w-[500px] xl:max-w-[600px]"
           >
-            <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal] mb-[30px] sm:mb-7"
+            <img
+              class="w-full"
+              src="./assetes/img/png/Career Icon.png"
+              alt="bg-img"
+            />
+          </div>
+          <div class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto">
+            <div
+              class="max-w-[664px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[90px]"
             >
-              Join Our Nebula Vets Team:
-            </p>
-            <p
-              class="roboto-mono text-[#D7D9DD] text-base sm:text-lg md:text-xl lg:text-2xl xl:text-[28px]"
-            >
-              Empowering Careers in Veterinary Care
-            </p>
-            <p
-              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] leading-[157%] sm:leading-[130%] mt-[30px] sm:mt-7 mb-[51px] sm:mb-12"
-            >
-              At Nebula Vets, we are passionate about providing exceptional
-              veterinary care and creating a positive impact in the lives of
-              pets and their families. We believe in the power of collaboration,
-              compassion, and continuous growth. If you are seeking a rewarding
-              career in veterinary medicine, Nebula Vets offers exciting
-              opportunities to join our dedicated team.
-            </p>
-            <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
-              href="#"
-            >
-              <span class="btn__text">BOOK NOW</span>
-            </a>
+              <p
+                class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal] mb-[30px] sm:mb-7"
+              >
+                Join Our Nebula Vets Team:
+              </p>
+              <p
+                class="roboto-mono text-[#D7D9DD] text-base sm:text-lg md:text-xl lg:text-2xl xl:text-[28px]"
+              >
+                Empowering Careers in Veterinary Care
+              </p>
+              <p
+                class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] leading-[157%] sm:leading-[130%] mt-[30px] sm:mt-7 mb-[51px] sm:mb-12"
+              >
+                At Nebula Vets, we are passionate about providing exceptional
+                veterinary care and creating a positive impact in the lives of
+                pets and their families. We believe in the power of
+                collaboration, compassion, and continuous growth. If you are
+                seeking a rewarding career in veterinary medicine, Nebula Vets
+                offers exciting opportunities to join our dedicated team.
+              </p>
+              <a
+                class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                href="#"
+              >
+                <span class="btn__text">BOOK NOW</span>
+              </a>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
-    <!-- slider -->
-    <section class="!bg-[#494336] max-[400px]:px-8">
-      <div
-        class="swiper mySwiper !pb-[60px] sm:!pb-[90px] md:!pb-[120px] !max-w-[1440px] !mx-auto"
-      >
-        <div class="swiper-wrapper">
-          <div class="swiper-slide block sm:!hidden">
-            <img
-              class="w-full h-full"
-              src="./assetes/img/png/slider2-img-1.png"
-              alt="slider"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              class="w-full h-full"
-              src="./assetes/img/png/carrer-slider-img-1.png"
-              alt="slider-img"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              class="w-full h-full"
-              src="./assetes/img/png/carrer-slider-img-2.png"
-              alt="slider-img"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              class="w-full h-full"
-              src="./assetes/img/png/carrer-slider-img-3.png"
-              alt="slider-img"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              class="w-full h-full"
-              src="./assetes/img/png/carrer-slider-img-4.png"
-              alt="slider-img"
-            />
-          </div>
-        </div>
-      </div>
-      <div class="relative">
+      </section>
+      <!-- slider -->
+      <section class="!bg-[#494336] max-[400px]:px-8">
         <div
-          class="swiper-pagination absolute !top-[-60px] sm:!top-[-90px] !right-0 !left-0 !w-auto"
-        ></div>
-      </div>
-    </section>
+          class="swiper mySwiper !pb-[60px] sm:!pb-[90px] md:!pb-[120px] !max-w-[1440px] !mx-auto"
+        >
+          <div class="swiper-wrapper">
+            <div class="swiper-slide block sm:!hidden">
+              <img
+                class="w-full h-full"
+                src="./assetes/img/png/slider2-img-1.png"
+                alt="slider"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                class="w-full h-full"
+                src="./assetes/img/png/carrer-slider-img-1.png"
+                alt="slider-img"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                class="w-full h-full"
+                src="./assetes/img/png/carrer-slider-img-2.png"
+                alt="slider-img"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                class="w-full h-full"
+                src="./assetes/img/png/carrer-slider-img-3.png"
+                alt="slider-img"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                class="w-full h-full"
+                src="./assetes/img/png/carrer-slider-img-4.png"
+                alt="slider-img"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="relative">
+          <div
+            class="swiper-pagination absolute !top-[-60px] sm:!top-[-90px] !right-0 !left-0 !w-auto"
+          ></div>
+        </div>
+      </section>
+    </div>
     <!--  -->
-    <section>
+    <section class="overflow-hidden">
       <div class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20">
         <div>
           <p
@@ -276,6 +279,8 @@
           <div>
             <button
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
+              data-aos="fade-right"
+              data-aos-duration="1000"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -347,6 +352,8 @@
             </button>
             <button
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              data-aos="fade-left"
+              data-aos-duration="1000"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -417,6 +424,8 @@
             </button>
             <button
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              data-aos="fade-right"
+              data-aos-duration="1000"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -488,6 +497,8 @@
             </button>
             <button
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              data-aos="fade-left"
+              data-aos-duration="1000"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -558,6 +569,8 @@
             </button>
             <button
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              data-aos="fade-right"
+              data-aos-duration="1000"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -629,6 +642,8 @@
             </button>
             <button
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              data-aos="fade-left"
+              data-aos-duration="1000"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -717,6 +732,8 @@
         </div>
         <div
           class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[80px] mx-auto"
+          data-aos="zoom-out"
+          data-aos-duration="800"
         >
           <div class="max-w-[829px]">
             <p
@@ -1019,6 +1036,10 @@
           1250: { slidesPerView: 3.8 },
         },
       });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
