--- a/hospice&euthanasia.html
+++ b/hospice&euthanasia.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <!-- navbar -->
@@ -35,7 +36,7 @@
             class="flex gap-[30px] xl:gap-[66px] items-center max-[950px]:hidden"
           >
             <a
-              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+              class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
               href="./sevices.html"
               >SERVICES</a
             >
@@ -100,7 +101,7 @@
               <div class="px-4 pt-24 pb-4">
                 <div class="flex flex-col gap-[40px] items-center">
                   <a
-                    class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+                    class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
                     href="./sevices.html"
                     >SERVICES</a
                   >
@@ -141,7 +142,11 @@
     </div>
     <!-- hero-section -->
     <section>
-      <div class="bg-[#494336] mt-[86px] sm:mt-[88px] lg:mt-[98px] relative">
+      <div
+        class="bg-[#494336] mt-[86px] sm:mt-[88px] lg:mt-[98px] relative"
+        data-aos="fade-down"
+        data-aos-duration="1000"
+      >
         <div
           class="absolute right-0 max-md:top-5 md:bottom-7 max-sm:max-w-[253px] max-md:max-w-[300px] max-xl:max-w-[400px]"
         >
@@ -180,7 +185,7 @@
       </div>
     </section>
     <!-- health-check-exam -->
-    <section>
+    <section class="overflow-hidden">
       <div class="bg-[rgba(215,217,221,0.50)] relative">
         <div class="absolute bottom-0 w-full">
           <img class="mx-auto" src="./assest/img/page-3-absolute.png" alt="" />
@@ -188,7 +193,7 @@
         <div
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[130px] relative z-[1] flex flex-col gap-14 sm:gap-15"
         >
-          <div>
+          <div data-aos="fade-right" data-aos-duration="1000">
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
@@ -205,7 +210,7 @@
               empathy and understanding. Here's how we can assist you:
             </p>
           </div>
-          <div>
+          <div data-aos="fade-left" data-aos-duration="1000">
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
@@ -223,7 +228,7 @@
               pet.
             </p>
           </div>
-          <div>
+          <div data-aos="fade-right" data-aos-duration="1000">
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
@@ -240,7 +245,7 @@
               make the best decision for your pet and your family.
             </p>
           </div>
-          <div>
+          <div data-aos="fade-left" data-aos-duration="1000">
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
@@ -256,7 +261,7 @@
               pet's comfort, dignity, and pain-free experience during this time.
             </p>
           </div>
-          <div>
+          <div data-aos="fade-right" data-aos-duration="1000">
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
@@ -273,7 +278,7 @@
               and reassurance throughout the process.
             </p>
           </div>
-          <div>
+          <div data-aos="fade-left" data-aos-duration="1000">
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
@@ -310,7 +315,11 @@
         <div
           class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[80px] mx-auto"
         >
-          <div class="max-w-[867px]">
+          <div
+            class="max-w-[867px]"
+            data-aos="zoom-out"
+            data-aos-duration="1000"
+          >
             <p
               class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-[30px]"
             >
@@ -546,6 +555,10 @@
         sidebar.classList.add("translate-x-full");
         overlay.classList.add("hidden");
       });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
