--- a/lasertheropy.html
+++ b/lasertheropy.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <!-- navbar -->
@@ -35,7 +36,7 @@
             class="flex gap-[30px] xl:gap-[66px] items-center max-[950px]:hidden"
           >
             <a
-              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+              class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
               href="./sevices.html"
               >SERVICES</a
             >
@@ -100,7 +101,7 @@
               <div class="px-4 pt-24 pb-4">
                 <div class="flex flex-col gap-[40px] items-center">
                   <a
-                    class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+                    class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
                     href="./sevices.html"
                     >SERVICES</a
                   >
@@ -141,7 +142,11 @@
     </div>
     <!-- hero-section -->
     <section>
-      <div class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative">
+      <div
+        class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
+        data-aos="fade-down"
+        data-aos-duration="1000"
+      >
         <div
           class="absolute right-0 max-sm:top-0 sm:mt-4 max-sm:max-w-[200px] max-md:max-w-[272px] max-lg:max-w-[350px] max-xl:max-w-[500px] xl:max-w-[600px]"
         >
@@ -182,7 +187,7 @@
     </section>
     <!--  -->
     <section>
-      <div class="bg-[rgba(215,217,221,0.50)] relative">
+      <div class="bg-[rgba(215,217,221,0.50)] relative overflow-hidden">
         <div class="absolute bottom-0 w-full">
           <img
             class="mx-auto"
@@ -194,17 +199,23 @@
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
         >
           <p
+            data-aos="zoom-in"
+            data-aos-duration="1000"
             class="text-[#494336] text-base sm:text-lg md:text-xl lg:text-2xl xl:text-[28px] roboto-mono mb-[45px] sm:mb-13 lg:mb-15 max-sm:leading-[175%]"
           >
             Discover the Power of Laser Therapy at Nebula Vets: Elevating Pet
             Wellness with Advanced Healing
           </p>
           <p
+            data-aos="fade-right"
+            data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[20px] sm:mb-6"
           >
             What is Laser Therapy?
           </p>
           <p
+            data-aos="fade-right"
+            data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl mb-[30px] sm:mb-10"
           >
             Laser therapy, also known as low-level laser therapy or cold laser
@@ -215,11 +226,15 @@
             treatments to provide comprehensive care.
           </p>
           <p
+            data-aos="fade-left"
+            data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[20px] sm:mb-6"
           >
             How Does Laser Therapy Work?
           </p>
           <p
+            data-aos="fade-left"
+            data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl"
           >
             During a laser therapy session, a handheld device emits a
@@ -233,7 +248,7 @@
       </div>
     </section>
     <!--  -->
-    <section>
+    <section class="overflow-hidden">
       <div class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20">
         <div>
           <p
@@ -243,6 +258,8 @@
           </p>
           <div>
             <button
+              data-aos="fade-right"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -315,6 +332,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-left"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -385,6 +404,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-right"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -454,6 +475,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-left"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -523,6 +546,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-right"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -593,6 +618,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-left"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -663,6 +690,8 @@
               </p>
             </button>
             <button
+              data-aos="fade-right"
+              data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
             >
               <div class="flex justify-between w-full items-center gap-5">
@@ -740,6 +769,8 @@
     <section>
       <div class="bg-[rgba(215,217,221,0.50)]">
         <div
+          data-aos="zoom-in"
+          data-aos-duration="1000"
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20"
         >
           <p
@@ -775,7 +806,11 @@
         <div
           class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[80px] mx-auto"
         >
-          <div class="max-w-[867px]">
+          <div
+            class="max-w-[867px]"
+            data-aos="zoom-out"
+            data-aos-duration="1000"
+          >
             <p
               class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-[30px]"
             >
@@ -1030,6 +1065,10 @@
           }
         });
       });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
