--- a/microchiping.html
+++ b/microchiping.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <!-- navbar -->
@@ -35,7 +36,7 @@
             class="flex gap-[30px] xl:gap-[66px] items-center max-[950px]:hidden"
           >
             <a
-              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+              class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
               href="./sevices.html"
               >SERVICES</a
             >
@@ -100,7 +101,7 @@
               <div class="px-4 pt-24 pb-4">
                 <div class="flex flex-col gap-[40px] items-center">
                   <a
-                    class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+                    class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
                     href="./sevices.html"
                     >SERVICES</a
                   >
@@ -141,7 +142,11 @@
     </div>
     <!-- hero-section -->
     <section>
-      <div class="bg-[#494336] mt-[86px] sm:mt-[88px] lg:mt-[98px] relative">
+      <div
+        data-aos="fade-down"
+        data-aos-duration="1000"
+        class="bg-[#494336] mt-[86px] sm:mt-[88px] lg:mt-[98px] relative"
+      >
         <div
           class="absolute right-0 max-md:top-5 md:bottom-7 max-sm:max-w-[253px] max-md:max-w-[300px] max-xl:max-w-[400px]"
         >
@@ -189,11 +194,15 @@
         <div
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[130px] relative z-[1] flex flex-col gap-14 sm:gap-15"
         >
-          <p class="roboto text-base sm:text-lg lg:text-[28px] text-[#494336]">
+          <p
+            data-aos="zoom-in"
+            data-aos-duration="1000"
+            class="roboto text-base sm:text-lg lg:text-[28px] text-[#494336]"
+          >
             Here are a few compelling reasons why microchipping is a wise
             choice:
           </p>
-          <div>
+          <div data-aos="fade-right" data-aos-duration="1000">
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
@@ -210,7 +219,7 @@
               information and swiftly reunite you with your beloved pet..
             </p>
           </div>
-          <div>
+          <div data-aos="fade-left" data-aos-duration="1000">
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
@@ -226,7 +235,7 @@
               reducing the emotional strain of a lost pet situation.
             </p>
           </div>
-          <div>
+          <div data-aos="fade-right" data-aos-duration="1000">
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
@@ -242,7 +251,7 @@
               that cannot be tampered with or lost.
             </p>
           </div>
-          <div>
+          <div data-aos="fade-left" data-aos-duration="1000">
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
@@ -258,7 +267,7 @@
               accessed regardless of where they are found.
             </p>
           </div>
-          <div>
+          <div data-aos="fade-right" data-aos-duration="1000">
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
@@ -295,7 +304,11 @@
         <div
           class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[80px] mx-auto"
         >
-          <div class="max-w-[867px]">
+          <div
+            data-aos="zoom-out"
+            data-aos-duration="1000"
+            class="max-w-[867px]"
+          >
             <p
               class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-[30px]"
             >
@@ -531,6 +544,10 @@
         sidebar.classList.add("translate-x-full");
         overlay.classList.add("hidden");
       });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
