--- a/sevices.html
+++ b/sevices.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <style>
     .swiper-slide {
@@ -57,7 +58,7 @@
             class="flex gap-[30px] xl:gap-[66px] items-center max-[950px]:hidden"
           >
             <a
-              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+              class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
               href="./sevices.html"
               >SERVICES</a
             >
@@ -122,7 +123,7 @@
               <div class="px-4 pt-24 pb-4">
                 <div class="flex flex-col gap-[40px] items-center">
                   <a
-                    class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+                    class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
                     href="./sevices.html"
                     >SERVICES</a
                   >
@@ -164,6 +165,8 @@
     <!-- hero-section -->
     <section>
       <div
+        data-aos="fade-down"
+        data-aos-duration="1000"
         class="bg-[#494336] max-[950px]:bg-[url('./assetes/img/png/hero-s-cat-d-img-2.png')] min-[950px]:bg-[url('./assetes/img/png/hero-section-cat-dog-img.png')] bg-no-repeat bg-right-bottom mt-[102px] sm:mt-[88px] lg:mt-[98px]"
       >
         <div class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto">
@@ -203,7 +206,7 @@
               class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px]"
             >
               <img
-                class="w-full h-full"
+                class="w-full h-full object-cover"
                 src="./assetes/img/png/slider2-img-1.png"
                 alt="slider"
               />
@@ -214,7 +217,7 @@
               class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px]"
             >
               <img
-                class="w-full h-full"
+                class="w-full h-full object-cover"
                 src="./assetes/img/png/slider2-img-2.png"
                 alt="slider-img"
               />
@@ -225,7 +228,7 @@
               class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px]"
             >
               <img
-                class="w-full h-full"
+                class="w-full h-full object-cover"
                 src="./assetes/img/png/slider2-img-3.png"
                 alt="slider-img"
               />
@@ -236,7 +239,7 @@
               class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px]"
             >
               <img
-                class="w-full h-full"
+                class="w-full h-full object-cover"
                 src="./assetes/img/png/slider2-img-4.png"
                 alt="slider-img"
               />
@@ -247,7 +250,7 @@
               class="max-sm:w-[100%] sm:w-[420px] max-sm:h-[296px] sm:h-[420px]"
             >
               <img
-                class="w-full h-full"
+                class="w-full h-full object-cover"
                 src="./assetes/img/png/slider2-img-3.png"
                 alt="slider-img"
               />
@@ -260,7 +263,7 @@
       </div>
     </div>
     <!-- tab section -->
-    <section>
+    <section class="overflow-hidden">
       <div class="bg-[#494336]">
         <div class="max-w-[1320px] mx-auto px-10 py-[44px] md:py-[80px]">
           <div
@@ -299,7 +302,11 @@
       </div>
       <div class="tab-content hidden" id="tab1">
         <div class="flex max-md:flex-wrap max-w-[1440px] mx-auto">
-          <div class="max-w-[620px]">
+          <div
+            data-aos="fade-right"
+            data-aos-duration="1000"
+            class="max-w-[620px]"
+          >
             <div
               class="pt-[120px] max-md:pb-[60px] md:pt-20 px-[0px] lg:pl-[48px] lg:pr-[67px]"
             >
@@ -330,7 +337,7 @@
                   comprehensive screenings, we can identify and address any
                   problems at their earliest stages.
                 </p>
-                <div class="max-sm:hidden">
+                <div class="max-md:!hidden">
                   <a
                     class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                     href="#"
@@ -341,7 +348,11 @@
               </div>
             </div>
           </div>
-          <div class="max-w-[820px] bg-[rgba(215,217,221,0.50)] lg:pr-4">
+          <div
+            data-aos="fade-left"
+            data-aos-duration="1000"
+            class="max-w-[820px] bg-[rgba(215,217,221,0.50)] lg:pr-4"
+          >
             <div
               class="py-[60px] max-md:px-8 md:py-20 sm:pl-8 md:pl-[40px] lg:pl-[80px] xl:pl-[110px] pr-[34px] w-full"
             >
@@ -421,7 +432,11 @@
       </div>
       <div class="tab-content hidden" id="tab2">
         <div class="flex max-md:flex-wrap max-w-[1440px] mx-auto">
-          <div class="max-w-[620px]">
+          <div
+            data-aos="fade-right"
+            data-aos-duration="1000"
+            class="max-w-[620px]"
+          >
             <div
               class="pt-[120px] max-md:pb-[60px] md:pt-20 px-[0px] lg:pl-[48px] lg:pr-[67px]"
             >
@@ -453,7 +468,7 @@
                   treatments.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center max-md:!hidden"
                   href="#"
                 >
                   <span class="btn__text">BOOK NOW</span>
@@ -461,7 +476,11 @@
               </div>
             </div>
           </div>
-          <div class="max-w-[820px] bg-[rgba(215,217,221,0.50)] lg:pr-4">
+          <div
+            data-aos="fade-left"
+            data-aos-duration="1000"
+            class="max-w-[820px] bg-[rgba(215,217,221,0.50)] lg:pr-4"
+          >
             <div
               class="py-[60px] max-md:px-8 md:py-20 sm:pl-8 md:pl-[40px] lg:pl-[80px] xl:pl-[110px] pr-[34px] w-full"
             >
@@ -561,7 +580,11 @@
       </div>
       <div class="tab-content hidden" id="tab3">
         <div class="flex max-md:flex-wrap max-w-[1440px] mx-auto">
-          <div class="max-w-[620px]">
+          <div
+            data-aos="fade-right"
+            data-aos-duration="1000"
+            class="max-w-[620px]"
+          >
             <div
               class="pt-[120px] max-md:pb-[60px] md:pt-20 px-[0px] lg:pl-[48px] lg:pr-[67px]"
             >
@@ -591,7 +614,7 @@
                   committed to providing the highest level of care to your pets.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center max-md:!hidden"
                   href="#"
                 >
                   <span class="btn__text">BOOK NOW</span>
@@ -599,7 +622,11 @@
               </div>
             </div>
           </div>
-          <div class="max-w-[820px] bg-[rgba(215,217,221,0.50)] lg:pr-4">
+          <div
+            data-aos="fade-left"
+            data-aos-duration="1000"
+            class="max-w-[820px] bg-[rgba(215,217,221,0.50)] lg:pr-4"
+          >
             <div
               class="py-[60px] max-md:px-8 md:pt-20 md:pb-[100px] sm:pl-8 md:pl-[40px] lg:pl-[80px] xl:pl-[110px] pr-[34px] w-full"
             >
@@ -656,7 +683,11 @@
       </div>
       <div class="tab-content hidden" id="tab4">
         <div class="flex max-md:flex-wrap max-w-[1440px] mx-auto">
-          <div class="max-w-[620px]">
+          <div
+            data-aos="fade-right"
+            data-aos-duration="1000"
+            class="max-w-[620px]"
+          >
             <div
               class="pt-[120px] max-md:pb-[60px] md:pt-20 px-[0px] lg:pl-[48px] lg:pr-[67px]"
             >
@@ -687,7 +718,7 @@
                   your pet's unique needs.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center max-md:!hidden"
                   href="#"
                 >
                   <span class="btn__text">BOOK NOW</span>
@@ -695,7 +726,11 @@
               </div>
             </div>
           </div>
-          <div class="max-w-[820px] bg-[rgba(215,217,221,0.50)] lg:pr-4">
+          <div
+            data-aos="fade-left"
+            data-aos-duration="1000"
+            class="max-w-[820px] bg-[rgba(215,217,221,0.50)] lg:pr-4"
+          >
             <div
               class="py-[60px] max-md:px-8 md:py-20 sm:pl-8 md:pl-[40px] lg:pl-[80px] xl:pl-[110px] pr-[34px] w-full"
             >
@@ -1153,6 +1188,10 @@
           1250: { slidesPerView: 3.8 },
         },
       });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
