--- a/travel.html
+++ b/travel.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <!-- navbar -->
@@ -35,7 +36,7 @@
             class="flex gap-[30px] xl:gap-[66px] items-center max-[950px]:hidden"
           >
             <a
-              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+              class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
               href="./sevices.html"
               >SERVICES</a
             >
@@ -100,7 +101,7 @@
               <div class="px-4 pt-24 pb-4">
                 <div class="flex flex-col gap-[40px] items-center">
                   <a
-                    class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+                    class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
                     href="./sevices.html"
                     >SERVICES</a
                   >
@@ -141,7 +142,11 @@
     </div>
     <!-- hero-section -->
     <section>
-      <div class="bg-[#494336] mt-[86px] sm:mt-[88px] lg:mt-[98px] relative">
+      <div
+        data-aos="fade-down"
+        data-aos-duration="1000"
+        class="bg-[#494336] mt-[86px] sm:mt-[88px] lg:mt-[98px] relative"
+      >
         <div
           class="absolute right-0 max-md:top-5 md:bottom-7 max-sm:max-w-[253px] max-md:max-w-[300px] max-xl:max-w-[400px]"
         >
@@ -180,14 +185,14 @@
     </section>
     <!-- health-check-exam -->
     <section>
-      <div class="bg-[rgba(215,217,221,0.50)] relative">
+      <div class="bg-[rgba(215,217,221,0.50)] relative overflow-hidden">
         <div class="absolute bottom-0 w-full">
           <img class="mx-auto" src="./assest/img/page-3-absolute.png" alt="" />
         </div>
         <div
           class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[130px] relative z-[1] flex flex-col gap-14 sm:gap-15"
         >
-          <div>
+          <div data-aos="fade-right" data-aos-duration="1000">
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
@@ -203,7 +208,7 @@
               for your pet's travel.
             </p>
           </div>
-          <div>
+          <div data-aos="fade-left" data-aos-duration="1000">
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
@@ -221,7 +226,7 @@
               for you and your pet.
             </p>
           </div>
-          <div>
+          <div data-aos="fade-right" data-aos-duration="1000">
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
@@ -236,7 +241,7 @@
               advise on what exactly you need.
             </p>
           </div>
-          <div>
+          <div data-aos="fade-left" data-aos-duration="1000">
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
             >
@@ -280,7 +285,11 @@
         <div
           class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[80px] mx-auto"
         >
-          <div class="max-w-[867px]">
+          <div
+            data-aos="zoom-in"
+            data-aos-duration="1000"
+            class="max-w-[867px]"
+          >
             <p
               class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-[30px]"
             >
@@ -516,6 +525,10 @@
         sidebar.classList.add("translate-x-full");
         overlay.classList.add("hidden");
       });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
