--- a/vaccination.html
+++ b/vaccination.html
@@ -29,6 +29,7 @@
       }
     </style>
     <title>Nebula Vets</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <!-- navbar -->
@@ -49,7 +50,7 @@
             class="flex gap-[30px] xl:gap-[66px] items-center max-[950px]:hidden"
           >
             <a
-              class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+              class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
               href="./sevices.html"
               >SERVICES</a
             >
@@ -114,7 +115,7 @@
               <div class="px-4 pt-24 pb-4">
                 <div class="flex flex-col gap-[40px] items-center">
                   <a
-                    class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
+                    class="roboto-mono text-linear-gradient hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
                     href="./sevices.html"
                     >SERVICES</a
                   >
@@ -156,6 +157,8 @@
     <!-- hero -->
     <section>
       <div
+        data-aos="fade-down"
+        data-aos-duration="1000"
         class="bg-[#494336] overflow-hidden relative bg-no-repeat bg-right-bottom pt-[102px] sm:pt-[88px] lg:pt-[98px]"
       >
         <div
@@ -198,7 +201,7 @@
     </section>
     <!-- Why should I vaccinate my pet? -->
     <section>
-      <div class="relative bg-[rgba(215,217,221,0.50)]">
+      <div class="relative bg-[rgba(215,217,221,0.50)] overflow-hidden">
         <div class="absolute bottom-0">
           <img
             width="100%"
@@ -212,10 +215,16 @@
           <div
             class="text-sm sm:text-base md:text-lg lg:text-xl text-[#494336]"
           >
-            <p class="text-2xl sm:text-3xl lg:text-[36px]">
+            <p
+              data-aos="fade-right"
+              data-aos-duration="1000"
+              class="text-2xl sm:text-3xl lg:text-[36px]"
+            >
               Why should I vaccinate my pet?
             </p>
             <p
+              data-aos="fade-right"
+              data-aos-duration="1000"
               class="text-sm sm:text-base md:text-lg mt-5 !leading-[22px] sm:!leading-[24px]"
             >
               Vaccines are affective as the expose your pet’s immune system to
@@ -224,10 +233,16 @@
               effectively when exposed to the disease. Vaccines are also
               relatively painless, quick and cost-effective to administer.
             </p>
-            <p class="text-2xl sm:text-3xl lg:text-[36px] mt-9">
+            <p
+              data-aos="fade-left"
+              data-aos-duration="1000"
+              class="text-2xl sm:text-3xl lg:text-[36px] mt-9"
+            >
               What are core and non-core vaccines?
             </p>
             <p
+              data-aos="fade-left"
+              data-aos-duration="1000"
               class="text-sm sm:text-base md:text-lg mt-5 !leading-[22px] sm:!leading-[24px]"
             >
               Core vaccines are often vaccines considered essential for your
@@ -242,7 +257,7 @@
     </section>
     <!-- core dog vaccine -->
     <section>
-      <div class="bg-white">
+      <div class="bg-white overflow-hidden">
         <div
           class="max-w-[1160px] px-[32px] sm:px-[40px] pt-[60px] sm:pt-[80px] mx-auto"
         >
@@ -251,6 +266,8 @@
           >
             <div class="w-full mt-8">
               <button
+                data-aos="fade-right"
+                data-aos-duration="1000"
                 class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner group"
               >
                 <div
@@ -324,6 +341,8 @@
                 </p>
               </button>
               <button
+                data-aos="fade-left"
+                data-aos-duration="1000"
                 class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner group"
               >
                 <div
@@ -397,6 +416,8 @@
                 </p>
               </button>
               <button
+                data-aos="fade-right"
+                data-aos-duration="1000"
                 class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner group"
               >
                 <div
@@ -488,6 +509,8 @@
             <div class="swiper mySwiper">
               <div class="swiper-wrapper">
                 <div
+                  data-aos="flip-left"
+                  data-aos-duration="1000"
                   class="swiper-slide !h-[461px] min-[440px]:!h-[400px] min-[700px]:!h-[450px] lg:!h-[471px]"
                 >
                   <div
@@ -536,6 +559,8 @@
                   </div>
                 </div>
                 <div
+                  data-aos="flip-right"
+                  data-aos-duration="1000"
                   class="swiper-slide !h-[461px] min-[440px]:!h-[400px] min-[700px]:!h-[450px] lg:!h-[471px]"
                 >
                   <div
@@ -584,6 +609,8 @@
             <div class="swiper mySwipertwo">
               <div class="swiper-wrapper">
                 <div
+                  data-aos="flip-right"
+                  data-aos-duration="1000"
                   class="swiper-slide !h-[461px] min-[440px]:!h-[400px] min-[700px]:!h-[450px] lg:!h-[471px]"
                 >
                   <div
@@ -612,6 +639,8 @@
                   </div>
                 </div>
                 <div
+                  data-aos="flip-left"
+                  data-aos-duration="1000"
                   class="swiper-slide !h-[461px] min-[440px]:!h-[400px] min-[700px]:!h-[450px] lg:!h-[471px]"
                 >
                   <div
@@ -663,7 +692,11 @@
         <div
           class="max-w-[1160px] px-[32px] sm:px-[40px] py-[55px] sm:pt-[70px] sm:pb-10 mx-auto"
         >
-          <div class="max-w-[867px]">
+          <div
+            data-aos="zoom-in"
+            data-aos-duration="1000"
+            class="max-w-[867px]"
+          >
             <p
               class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-5"
             >
@@ -983,6 +1016,10 @@
           },
         },
       });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
